@@ -66,6 +66,13 @@ typedef enum
 
 typedef enum{
   AGS_DEVOUT_ERROR_LOCKED_SOUNDCARD,
+  AGS_DEVOUT_ERROR_BROKEN_CONFIGURATION,
+  AGS_DEVOUT_ERROR_ACCESS_TYPE_NOT_AVAILABLE,
+  AGS_DEVOUT_ERROR_SAMPLE_FORMAT_NOT_AVAILABLE,
+  AGS_DEVOUT_ERROR_CHANNELS_NOT_AVAILABLE,
+  AGS_DEVOUT_ERROR_SAMPLERATE_NOT_AVAILABLE,
+  AGS_DEVOUT_ERROR_BUFFER_SIZE_NOT_AVAILABLE,
+  AGS_DEVOUT_ERROR_HW_PARAMETERS_NOT_AVAILABLE,
 }AgsDevoutError;
 
 struct _AgsDevout
